force-app/main/default/objects/RAID__c/RAID__c.object-meta.xml
<CustomObject>
    <label>RAID</label>
    <nameField>
        <label>Raid Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RAIDS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>