force-app/main/default/objects/RAID__c/fields/Mitigation__c.field-meta.xml
<CustomField>
    <fullName>Mitigation__c</fullName>
    <label>Mitigation</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>