force-app/main/default/objects/RAID__c/recordTypes/Change_Requests.recordType-meta.xml
<RecordType>
    <fullName>Change_Requests</fullName>
    <active>true</active>
    <label>Change Requests</label>
</RecordType>