force-app/main/default/objects/RAID__c/recordTypes/Decisions.recordType-meta.xml
<RecordType>
    <fullName>Decisions</fullName>
    <active>true</active>
    <label>Decisions</label>
</RecordType>