force-app/main/default/objects/RAID__c/recordTypes/Incidents.recordType-meta.xml
<RecordType>
    <fullName>Incidents</fullName>
    <active>true</active>
    <label>Incidents</label>
</RecordType>