force-app/main/default/objects/RAID__c/recordTypes/Issues.recordType-meta.xml
<RecordType>
    <fullName>Issues</fullName>
    <active>true</active>
    <label>Issues</label>
</RecordType>