force-app/main/default/objects/RAID__c/recordTypes/Risks.recordType-meta.xml
<RecordType>
    <fullName>Risks</fullName>
    <active>true</active>
    <label>Risks</label>
</RecordType>